implemented inss calculation

--- a/app/views/web/proponents/_form.html.erb
+++ b/app/views/web/proponents/_form.html.erb
@@ -20,6 +20,8 @@
     wrapper_html: { class: 'form-group' } %>
   <%= f.input :salary, input_html: { class: 'form-control', autocomplete: 'nope' },
     wrapper_html: { class: 'form-group' } %>
+  <%= f.input :inss_discount, input_html: { class: 'form-control', autocomplete: 'nope' },
+    wrapper_html: { class: 'form-group' }, readonly: true %>
 </div>
 
 <div class="box-footer">
