--- a/app/views/layouts/_admin_lte_2_header.html.erb
+++ b/app/views/layouts/_admin_lte_2_header.html.erb
@@ -25,15 +25,14 @@
             <!-- The user image in the navbar-->
             <img src="/assets/user2-160x160.jpg" class="user-image" alt="User Image"/>
             <!-- hidden-xs hides the username on small devices so only the image appears. -->
-            <span class="hidden-xs"><%= current_user.email %></span>
+            <span class="hidden-xs"><%= current_user.email if current_user.present? %></span>
           </a>
           <ul class="dropdown-menu">
             <!-- The user image in the menu -->
             <li class="user-header">
               <img src="/assets/user2-160x160.jpg" class="img-circle" alt="User Image" />
               <p>
-                <%= current_user.email %>
-                <small>Member since Nov. 2012</small>
+                <%= current_user.email if current_user.present? %>
               </p>
             </li>
             <!-- Menu Body -->
