--- a/app/views/web/proponents/_form.html.erb
+++ b/app/views/web/proponents/_form.html.erb
@@ -22,6 +22,14 @@
     wrapper_html: { class: 'form-group' } %>
   <%= f.input :inss_discount, input_html: { class: 'form-control', autocomplete: 'nope' },
     wrapper_html: { class: 'form-group' }, readonly: true %>
+  <%= f.association :state, as: :select, collection: @states,
+    input_html: { class: 'form-control' }, wrapper_html: { class: 'form-group' } %>
+  <%# binding.pry %>
+  <%# f.association :city, as: :select, collection: @cities, selected: f.object.city_id, include_blank: false,
+    input_html: { class: 'form-control' }, wrapper_html: { class: 'form-group' } %>
+
+  <%= f.input :city_id, collection: @cities, include_blank: true,
+              selected: f.object.city_id, input_html: { class: 'form-control', data: { selected: f.object.city_id } }, wrapper_html: { class: 'form-group' } %>
 </div>
 
 <div class="box-footer">
