--- a/app/views/layouts/_admin_lte_2_sidebar.html.erb
+++ b/app/views/layouts/_admin_lte_2_sidebar.html.erb
@@ -5,16 +5,18 @@
   <section class="sidebar">
 
     <!-- Sidebar user panel (optional) -->
-    <div class="user-panel">
-      <div class="pull-left image">
-        <img src="/assets/user2-160x160.jpg" class="img-circle" alt="User Image" />
+    <% if current_user.present? %>
+      <div class="user-panel">
+        <div class="pull-left image">
+          <img src="/assets/user2-160x160.jpg" class="img-circle" alt="User Image" />
+        </div>
+        <div class="pull-left info">
+          <p><%= current_user.email %></p>
+          <!-- Status -->
+          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+        </div>
       </div>
-      <div class="pull-left info">
-        <p>Alexander Pierce</p>
-        <!-- Status -->
-        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-      </div>
-    </div>
+    <% end %>
 
     <!-- search form (Optional) -->
     <form action="#" method="get" class="sidebar-form">
@@ -28,15 +30,17 @@
     <!-- /.search form -->
 
     <!-- Sidebar Menu -->
-    <ul class="sidebar-menu">
-      <li class="header">HEADER</li>
-        <!-- Optionally, you can add icons to the links -->
-      <li class="active">
-        <%= link_to proponents_path, target: "" do %>
-          <i class="fa fa-link"></i><span><%= Proponent.model_name.human(count: 2) %></span>
-        <% end %>
-      </li>
-    </ul><!-- /.sidebar-menu -->
+    <% if user_signed_in? %>
+      <ul class="sidebar-menu">
+        <li class="header">HEADER</li>
+          <!-- Optionally, you can add icons to the links -->
+        <li class="active">
+          <%= link_to proponents_path, target: "" do %>
+            <i class="fa fa-link"></i><span><%= Proponent.model_name.human(count: 2) %></span>
+          <% end %>
+        </li>
+      </ul><!-- /.sidebar-menu -->
+    <% end %>
   </section>
   <!-- /.sidebar -->
 </aside>
