--- a/app/views/layouts/admin_lte_2.html.erb
+++ b/app/views/layouts/admin_lte_2.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>AdminLTE 2 | Dashboard</title>
+  <title>Credishop</title>
   <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
   <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
@@ -41,10 +41,10 @@
     <footer class="main-footer">
       <!-- To the right -->
       <div class="pull-right hidden-xs">
-        Anything you want
+        Developer: Ítalo Pires
       </div>
       <!-- Default to the left -->
-      <strong>Copyright &copy; 2015 <a href="#">Company</a>.</strong> All rights reserved.
+      <strong>Copyright &copy; <%= Date.current.year %> <a href="#">Credishop</a>.</strong> All rights reserved.
     </footer>
 
     <aside class="control-sidebar control-sidebar-dark">
